@@ -3,6 +3,7 @@ Akeeba Data Compliance 1.1.1
 + Rewritten cookie plugin to work with caching enabled
 + Consent can be transcribed from Joomla's privacy consent user profile field (migration from Joomla to DataCompliance)
 ~ Transcribing consent given during subscription only applies to Akeeba Subscriptions 5 and 6
+~ Compatibility with Akeeba Subscriptions 7 for data export and user anonymisation (Users model has been removed)
 # User Profile fields not displayed correctly when using an Edit Profile menu item
 
 Akeeba Data Compliance 1.1.0
